# crab-grab

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml
src/: app.rs  audio.rs  capture.rs  config.rs  main.rs  utils.rs
wix/: main.wxs
